--- a/misc/README
+++ b/misc/README
@@ -1,2 +1,2 @@
 This directory contains miscellaneous configuration files scattered
-across the filesystem.
+across the filesystem.  This is an "unstowable" directory.
