--- a/exiftool/.exiftool/meike-25mm-f1.8
+++ b/exiftool/.exiftool/meike-25mm-f1.8
@@ -1,5 +1,5 @@
-# ExifTool argfile to add Meike 25mm F1.8 as the lens
+# ExifTool argfile to add Meike 25mm f/1.8 as the lens
 -LensMake=Meike
--LensModel=Meike 25mm F1.8
--Lens=Meike 25mm F1.8
+-LensModel=Meike 25mm f/1.8
+-Lens=Meike 25mm f/1.8
 -Overwrite_original
