Add lensfun files.

--- a/tex/.texmf/tex/latex/newtxx/newtxx.sty
+++ b/tex/.texmf/tex/latex/newtxx/newtxx.sty
@@ -13,7 +13,7 @@
   cmintegrals
 ]{newtxmath}
 
-% Use Computern Modern Typewriter for fixed-with text.
+% Use Computer Modern Typewriter for fixed-with text.
 \renewcommand{\ttdefault}{cmtt}
 
 % Use Computer Modern's \sum: https://tex.stackexchange.com/a/200915
