--- a/tex/.texmf/tex/latex/newtxx/newtxx.sty
+++ b/tex/.texmf/tex/latex/newtxx/newtxx.sty
@@ -14,8 +14,7 @@
 \RequirePackage[amssymbols,cmbraces,subscriptcorrection]{newtxmath}
 
 % Use Computer Modern's \sum: https://tex.stackexchange.com/a/200915
-\DeclareSymbolFont{largesymbolsCM}{OMX}{cmex}{m}{n}
-\let\sum\relax
-\DeclareMathSymbol{\sum}{\mathop}{largesymbolsCM}{"50}
+\DeclareSymbolFont{largesymbolscm}{OMX}{cmex}{m}{n}
+\re@DeclareMathSymbol{\sum}{\mathop}{largesymbolscm}{"50}
 
 \endinput
