Use TeX Gyre fonts instead of Nimbus fonts.
When using XeTeX/LuaTeX + MathTime Pro 2, use the TeX Gyre fonts instead
of using Nimbus fonts since the TeX Gyre fonts are always included with
TeXLive.

--- a/tex/.texmf/tex/latex/mathtime/mathtime.sty
+++ b/tex/.texmf/tex/latex/mathtime/mathtime.sty
@@ -14,9 +14,9 @@
   \renewcommand{\ttdefault}{cmtt}
   \RequirePackage[scaled=0.92]{helvet}
 \else % if luatex or xelatex
-  \RequirePackage{fontspec}
-  \setmainfont{Nimbus Roman No9 L}
-  \setsansfont[Scale=0.92]{Nimbus Sans L}
+  \RequirePackage[no-math]{fontspec}
+  \setmainfont{TeX Gyre Termes}
+  \setsansfont[Scale=0.92]{TeX Gyre Heros}
 \fi
 
 % To avoid conflicts with amssymb and Springer's svjour.
