--- a/tex/.texmf/tex/latex/mathtime/mathtime.sty
+++ b/tex/.texmf/tex/latex/mathtime/mathtime.sty
@@ -4,7 +4,7 @@
 %
 
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{mathtime}[2017/12/19 v0.1]
+\ProvidesPackage{mathtime}[2019/01/01 v0.2]
 
 % Times for Roman, CM Typewriter for fixed-width text, and
 % Helvetica for sans serif.
@@ -34,5 +34,7 @@
   subscriptcorrection,
   zswash
 ]{mtpro2}
+
+\renewcommand\hbar\hslash % better reduced planck's constant
 
 \endinput
