Get rid of old hyperref options in jheppub.sty

--- a/tex/.texmf/tex/latex/jheppub/jheppub.sty
+++ b/tex/.texmf/tex/latex/jheppub/jheppub.sty
@@ -35,18 +35,7 @@
 \RequirePackage{epsfig}
 \RequirePackage{graphicx}
 \ifnatbibsort\RequirePackage[numbers,sort&compress]{natbib}\else\RequirePackage[numbers,compress]{natbib}\fi
-\RequirePackage[colorlinks=true
-  ,urlcolor=blue
-  ,anchorcolor=blue
-  ,citecolor=blue
-  ,filecolor=blue
-  ,linkcolor=blue
-  ,menucolor=blue
-  ,pagecolor=blue
-  ,linktocpage=true
-  ,pdfproducer=medialab
-  ,pdfa=true
-]{hyperref}
+\RequirePackage[colorlinks=true,allcolors=blue,linktocpage=true]{hyperref}
 
 \def\@subheader{\@empty}
 \def\@keywords{\@empty}
