--- a/misc/README
+++ b/misc/README
@@ -1,2 +1,2 @@
-This directory contains miscellaneous configuration files scattered
-across the filesystem.  This is an "unstowable" directory.
+This directory contains miscellaneous scripts for setting up a computer
+the way I like it.  This is an "unstowable" directory.
